deployment/deployment-istio-argorollouts/namespace-w-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webtest-istio-argorollouts
  labels:
    istio-injection: enabled
