deployment/deployment-istio-argorollouts/webtest-service-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtest-primary
  namespace: webtest-istio-argorollouts
  labels:
    app: webtest
    service: webtest-primary
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: webtest
