deployment/deployment-istio-argorollouts/webtest-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: webtest
  namespace: webtest-istio-argorollouts
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "webtest-istio-argorollouts.playground.ordergroove.com"
